--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,16 @@
 @import "tailwindcss";
 
 @layer base{
+    .btn_white_text{
+        @apply border-white bg-white px-4 py-2 text-[#141414];
+    }
+    .btn_green{
+        @apply bg-[#30AF5B] px-4 py-2 text-white transition-all;
+    }
     .btn_dark_green {
         @apply bg-[#292C27] px-4 py-2 text-white transition-all hover:bg-black;
+    }
+    .hero-map {
+        @apply absolute right-0 top-0 h-screen w-screen bg-[url('/pattern-bg.png')] bg-cover bg-center md:-right-28 xl:-top-60;
     }
 }
