--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@
   .camp-quote {
     @apply absolute -right-6 bottom-4 w-[140px] lg:bottom-10 xl:-right-8 xl:w-[186px] 2xl:right-0;
   }
+  .bg-feature{
+    @apply bg-[url('/feature-bg.png')] bg-cover bg-center;
+  }
 }
 
 .hide-scrollbar {
